--- a/Labguide/01.html
+++ b/Labguide/01.html
@@ -415,37 +415,7 @@ table {
 </ol>
 </div>
 <div class="paragraph">
-<p>You can use either one of the above choices of technology for building the application. Note: Do not use both the links as it might create in-consistency within the codebas</p>
-</div>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_setting_up_the_codebase">Setting up the codebase</h2>
-<div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Create a repository called <code>pages</code> in your GitHub account. You will need to initialize the local codebase as a git repo &amp; add your remote repository url prior to executing any commits on it</p>
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">git init
-git remote add origin https:<span style="color:#777">//github.com/[your-github-user-name]/pages.git</span></code></pre>
-</div>
-</div>
-</li>
-<li>
-<p>Commit code to your github repository</p>
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">git add .
-git config --global user.name <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">your-team-name</span><span style="color:#710">&quot;</span></span>
-git config --global user.email <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">your-git-email-address</span><span style="color:#710">&quot;</span></span>
-git commit -m <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">Spring Boot - Lab 1</span><span style="color:#710">&quot;</span></span>
-git push -u origin master</code></pre>
-</div>
+<p>You can use any one of the above options for building the application &amp; dockerizing.</p>
 </div>
 </li>
 </ol>
