--- a/Labguide/15.html
+++ b/Labguide/15.html
@@ -373,7 +373,7 @@ table {
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>The DevOps team wants improve the quality &amp; resiliency  of deployments, by preventing unforeseen errors and defects that creep into the production environment.
+<p>The DevOps team wants to improve the quality &amp; resiliency  of deployments, by preventing unforeseen errors and defects that creep into the production environment.
 The best way to accomplish this is by detecting &amp; preventing such scenarios in the pipeline itself.
 Basically, there are 2 kinds of defects that need to be controlled.</p>
 </div>
@@ -419,9 +419,9 @@ Basically, there are 2 kinds of defects that need to be controlled.</p>
 <p>Create the yaml manifest files for controller contract tests and database test</p>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">touch ~/workspace/helm-charts/charts/api/templates/test-api-contracts.yaml
-touch ~/workspace/helm-charts/charts/api/templates/test-dbconnect-positive.yaml
-touch ~/workspace/helm-charts/charts/api/templates/test-message-get.yaml</code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">touch ~/workspace/helm-charts/pages/charts/api/templates/test-api-contracts.yaml
+touch ~/workspace/helm-charts/pages/charts/api/templates/test-dbconnect-positive.yaml
+touch ~/workspace/helm-charts/pages/charts/api/templates/test-message-get.yaml</code></pre>
 </div>
 </div>
 </li>
