--- a/Labguide/12.html
+++ b/Labguide/12.html
@@ -853,6 +853,60 @@ Refer <a href="07-Pages-Curl-Commands.html#pages-curl-section">Pages Curl Guide<
 </div>
 </div>
 <div class="sect2">
+<h3 id="_add_notes_for_chart_users">Add NOTES for chart users</h3>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>It is a recommended best practice to add a <code>NOTES.txt</code> containing instructions for accessing the installed application.
+This file is customizable as per the chart user needs.</p>
+</li>
+<li>
+<p>Before adding the notes, add a label to the api service <code>access=external</code> for easy accessibility of the service.</p>
+</li>
+<li>
+<p>Create <code>NOTES.txt</code> file in the templates directory of the parent chart</p>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">touch ~/workspace/helm-charts/pages/charts/api/templates/NOTES.txt</code></pre>
+</div>
+</div>
+</li>
+<li>
+<p>Below is a sample text for our <code>NOTES.txt</code>, which is customizable according to application usability</p>
+<div class="paragraph">
+<p><code>~/workspace/helm-charts/pages/charts/api/templates/NOTES.txt</code></p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">Thank you for installing {{ .Chart.Name }}.
+
+Your release is named {{ .Release.Name }}.
+
+To learn more about the release, try:
+
+helm status {{ .Release.Name }}
+helm get all {{ .Release.Name }}
+
+To access the application, try:
+
+SVC=$(kubectl get svc -l access=external --namespace {{ .Release.Namespace }} -l access=external | awk 'NR==2{print $1}')
+
+kubectl --namespace {{ .Release.Namespace }} port-forward svc/$SVC 8080:8080</code></pre>
+</div>
+</div>
+</li>
+<li>
+<p>Re-install/update the umbrella chart for pages app</p>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">helm upgrade api pages -n dev</code></pre>
+</div>
+</div>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
 <h3 id="_task_accomplished">Task Accomplished</h3>
 <div class="paragraph">
 <p>Devops team was successful in refactoring the helm chart to be simple and reusable.</p>
