Added publishing support to artifacthub-instructions

--- a/Labguide/Overview.html
+++ b/Labguide/Overview.html
@@ -449,7 +449,10 @@ domains of Kubernetes, gearing up with the right toolkit to solve complex produc
 <p><a href="15.html#" target="_blank" rel="noopener">Automated Testing</a></p>
 </li>
 <li>
-<p><a href="16.html#" target="_blank" rel="noopener">Publish Helm Charts</a></p>
+<p><a href="16.html#" target="_blank" rel="noopener">Publish Helm Charts to Local Chart Repository</a></p>
+</li>
+<li>
+<p><a href="17.html#" target="_blank" rel="noopener">Publish Helm Charts to Public Chart Repository</a></p>
 </li>
 </ol>
 </div>
