Updated Index / Overview html

--- a/Labguide/Overview.html
+++ b/Labguide/Overview.html
@@ -377,7 +377,7 @@ designed lectures and hands-on lab exercises.</p>
 </div>
 <div class="paragraph">
 <p>The program starts with the basics of containers and gradually deep-dives into the integral
-concepts of Kubernetes. You will be learning the various competency
+concepts of Kubernetes.You will be learning the various competency
 domains of Kubernetes, gearing up with the right toolkit to solve complex production use-cases.</p>
 </div>
 <div class="paragraph">
@@ -388,74 +388,60 @@ domains of Kubernetes, gearing up with the right toolkit to solve complex produc
 <div class="sect1">
 <h2 id="_labs">Labs</h2>
 <div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p><a href="01.html#" target="_blank" rel="noopener">Dockerize an application</a></p>
-</li>
-<li>
-<p><a href="02.html#" target="_blank" rel="noopener">Kubernetes - Deploy Application workloads</a></p>
-</li>
-<li>
-<p><a href="03.html#" target="_blank" rel="noopener">Pods</a></p>
-</li>
-<li>
-<p><a href="04.html#" target="_blank" rel="noopener">Multi Container Pods</a></p>
-</li>
-<li>
-<p><a href="05.html#" target="_blank" rel="noopener">Pod Design</a></p>
-</li>
-<li>
-<p><a href="06.html#" target="_blank" rel="noopener">Configmaps &amp; Secrets</a></p>
-</li>
-<li>
-<p><a href="07.html#" target="_blank" rel="noopener">Jobs &amp; CronJobs</a></p>
-</li>
-<li>
-<p><a href="08.html#" target="_blank" rel="noopener">Resource Quotas</a></p>
-</li>
-<li>
-<p>Design your deployment</p>
-<div class="olist loweralpha">
-<ol class="loweralpha" type="a">
-<li>
-<p><a href="08.1-Assignment.html#" target="_blank" rel="noopener">Pages Microservice</a></p>
-</li>
-<li>
-<p><a href="08.2-Assignment.html#" target="_blank" rel="noopener">Category Microservice</a></p>
-</li>
-</ol>
-</div>
-</li>
-<li>
-<p><a href="09.html#" target="_blank" rel="noopener">Helmify</a></p>
-</li>
-<li>
-<p><a href="10.html#" target="_blank" rel="noopener">Helmify 2 tier microservice application</a></p>
-</li>
-<li>
-<p><a href="11.html#" target="_blank" rel="noopener">Reusable Helm Charts using Helm Templates</a></p>
-</li>
-<li>
-<p><a href="12.html#" target="_blank" rel="noopener">Refactoring - Best practices </a></p>
-</li>
-<li>
-<p><a href="13.html#" target="_blank" rel="noopener">Sharing Chart Data</a></p>
-</li>
-<li>
-<p><a href="14.html#" target="_blank" rel="noopener">Automated Deployments</a></p>
-</li>
-<li>
-<p><a href="15.html#" target="_blank" rel="noopener">Automated Testing</a></p>
-</li>
-<li>
-<p><a href="16.html#" target="_blank" rel="noopener">Publish Helm Charts to Local Chart Repository</a></p>
-</li>
-<li>
-<p><a href="17.html#" target="_blank" rel="noopener">Publish Helm Charts to Public Chart Repository</a></p>
-</li>
-</ol>
-</div>
+    <table>
+        <tr>
+            <td>1<b> . </b><a href="01.html#" target="_blank" rel="noopener">Dockerize an application</a>
+            </td>
+            <td>2<b> . </b><a href="02.html#" target="_blank" rel="noopener">Kubernetes - Deploy Application workloads</a>
+            </td>
+        </tr>
+        <tr>
+            <td>3<b> . </b><a href="03.html#" target="_blank" rel="noopener">Pods</a></td>
+            <td>4<b> . </b><a href="04.html#" target="_blank" rel="noopener">Multi Container Pods</a></td>
+        </tr>
+        <tr>
+            <td>5<b> . </b><a href="05.html#" target="_blank" rel="noopener">Pod Design</a></td>
+            <td>6<b> . </b><a href="06.html#" target="_blank" rel="noopener">Configmaps &amp; Secrets</a></td>
+        </tr>
+        <tr>
+            <td>7<b> . </b><a href="07.html#" target="_blank" rel="noopener">Jobs &amp; CronJobs</a</td>
+            <td>8<b> . </b><a href="08.html#" target="_blank" rel="noopener">Resource Quotas</a></td>
+        </tr>
+        <tr>
+            <td>9<b> . </b>Design your deployment
+
+                <br>
+               &nbsp &nbsp<a  href="08.1-Assignment.html#" target="_blank" rel="noopener">Pages Microservice</a><br>
+                &nbsp &nbsp<a href="08.2-Assignment.html#" target="_blank" rel="noopener">Category Microservice</a>
+            </td>
+            <td>10<b> . </b><a href="09.html#" target="_blank" rel="noopener">Helmify</a></td>
+        </tr>
+        <tr>
+            <td>11<b> . </b>
+                <a href="10.html#" target="_blank" rel="noopener">Helmify 2 tier microservice application</a>
+
+            </td>
+            <td>12<b> . </b>
+                <a href="11.html#" target="_blank" rel="noopener">Reusable Helm Charts using Helm Templates</a>
+               </td>
+        </tr>
+        <tr>
+            <td>13<b> . </b> <a href="12.html#" target="_blank" rel="noopener">Refactoring - Best practices </a>
+                </td>
+            <td>14<b> . </b><a href="13.html#" target="_blank" rel="noopener">Sharing Chart Data</a>
+                </td>
+        </tr>  <tr>
+        <td>15<b> . </b><a href="14.html#" target="_blank" rel="noopener">Automated Deployments</a>
+           </td>
+        <td>16<b> . </b> <a href="15.html#" target="_blank" rel="noopener">Automated Testing</a>
+            </td>
+    </tr>
+        <tr>
+            <td>17<b> . </b><a href="16.html#" target="_blank" rel="noopener">Publish Helm Charts to Local Chart Repository</a>
+                </td>
+            <td>18<b> . </b><a href="17.html#" target="_blank" rel="noopener">Publish Helm Charts to Public Chart Repository</a></td>
+        </tr>
+    </table>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
