--- a/Labguide/08.html
+++ b/Labguide/08.html
@@ -519,7 +519,7 @@ kubectl get resourcequota</code></pre>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete rs resource-quota</code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete quota resource-quota</code></pre>
 </div>
 </div>
 </div>
