--- a/Labguide/09.html
+++ b/Labguide/09.html
@@ -571,7 +571,8 @@ curl localhost:8080</code></pre>
 <pre class="CodeRay highlight"><code data-lang="shell script">helm template pages
 helm upgrade api pages
 helm list
-kubectl get deploy pages</code></pre>
+kubectl get deploy pages
+kubectl get pods</code></pre>
 </div>
 </div>
 </li>
